@@ -1,3 +1,6 @@
+2003-06-21  Tim Waugh  <twaugh@redhat.com>
+	* src/plugins/Ancestors.py (person_name): Handle titles and suffices.
+
 2003-06-19  Tim Waugh  <twaugh@redhat.com>
 	* Makefile.am, doc/Makefile.am, doc/omf.make, doc/xmldocs.make:
 	Fixes so that 'make distcheck' succeeds.
